--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/plangame.css">
-		<!--<script src = "js/phaser.min.js"></script>
+		<script src = "js/phaser.min.js"></script>
 		<script src = "js/game.js"></script>
 		<script src = "js/virtual_gamepad.js"></script>
 		<script src = "js/game_status.js"></script>
-		<script src = "js/moves.js"></script>-->
-		<script language="JavaScript">window.location.href = "https://maciver-lab.github.io/plangame/";</script>
+		<script src = "js/moves.js"></script>
 	</head>
 	<body>
 	<div id="content">
