--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/plangame.css">
-		<script src = "js/phaser.min.js"></script>
-		<script src = "js/game.js"></script>
-		<script src = "js/virtual_gamepad.js"></script>
-		<script src = "js/game_status.js"></script>
-		<script src = "js/moves.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/result_browser.css">
+		<script src = "js/util.js"></script>
+		<script src = "js/index.js"></script>
 	</head>
 	<body>
+	<h1>Result Index</h1>
 	<div id="content">
-		<div id="game-div"></div>
-		<div id="joystick-div"></div>
 	</div>
 	</body>
 </html>
