--- a/worlddetail.html
+++ b/worlddetail.html
@@ -7,14 +7,21 @@
 
 </head>
 <body>
+<h1>Result Index</h1>
 <div id="settings">
     <label for="view">View:</label>
     <select id="view">
         <option value="all">All</option>
         <option value="success">successful</option>
         <option value="fail">failed</option>
-    </select></div>
-<h1>Result Index</h1>
+    </select>
+    <label for="agents">Agents:</label>
+    <select id="agents">
+        <option value="both">both</option>
+        <option value="prey">prey</option>
+        <option value="predator">predator</option>
+    </select>
+</div>
 <div id="content">
 </div>
 </body>
