--- a/worlddetail.html
+++ b/worlddetail.html
@@ -12,8 +12,8 @@
     <label for="view">View:</label>
     <select id="view">
         <option value="all">All</option>
-        <option value="success">successful</option>
-        <option value="fail">failed</option>
+        <option value="success">goal attained</option>
+        <option value="fail">goal unattained</option>
     </select>
     <label for="agents">Agents:</label>
     <select id="agents">
