--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="css/result_browser.css">
-		<script src = "js/util.js"></script>
-		<script src = "js/index.js"></script>
-	</head>
-	<body>
-	<h1>Result Index</h1>
-	<div id="content">
-	</div>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<div class='set_layout' >
+    <div class='left_pane' id='spawn_location_4' style='width: 150px'>
+        <div class='title' id='title_spawn_location_4'>spawn_location_4</div>
+        <div class='episodes' id='episodes_spawn_location_4' experiment='f13' group='entropy_4' world='world_4_4' set='spawn_location_4'></div>
+    </div>
+    <div class='right_pane' id='replay' style='height: 600px'>
+        <div class='title' id='title_replay'>replay</div>
+        <div class='current_episode' id='current_episode'></div>
+        <div class='control_box' id='control_box'>
+            <div class='btn_first'></div>
+            <div class='btn_prev'></div>
+            <div class='btn_pause'></div>
+            <div class='btn_play'></div>
+            <div class='btn_next'></div>
+            <div class='btn_last'></div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
