--- a/experiments.html
+++ b/experiments.html
@@ -9,7 +9,7 @@
     <script src = "js/experiments.js"></script>
 </head>
 <body>
-    <h1>Result Index</h1>
+    <h1 id="title">Experiment</h1>
     <div id="content">
     </div>
 </body>
