--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<script> document.location = 'experiments.html'; </script>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
